--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ tasks.named('test') {
 
 sonarqube {
 	properties {
-		property "sonar.projectKey", "walgomwizeline_JunitDemo"
-		property "sonar.organization", "walgomwizeline"
+		property "sonar.projectKey", "cesarjose1_Demo"
+		property "sonar.organization", "bazdemo"
 		property "sonar.host.url", "https://sonarcloud.io"
 	}
 }
