--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id "org.sonarqube" version "3.5.0.2730"
+	id 'jacoco'
+
 }
 
 group = 'com.example.junit'
@@ -29,5 +31,21 @@ sonarqube {
 		property "sonar.projectKey", "cesarjose1_Demo"
 		property "sonar.organization", "bazdemo"
 		property "sonar.host.url", "https://sonarcloud.io"
+	}
+}
+
+
+jacoco {
+	toolVersion = "0.8.7"
+}
+
+tasks.test {
+	finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		html.enabled true
 	}
 }
